tests/basic/post/prim/070.pan.out
tests/basic/post/prim/070.pan:2:7-11: error: invalid subtype: ğŸ™ <: â„‚ğ•™
tests/basic/post/prim/070.pan:5:7-11: error: invalid subtype: ğ”¹ <: â„‚ğ•™
tests/basic/post/prim/070.pan:8:7-8: error: invalid subtype: â„¤ <: â„‚ğ•™
tests/basic/post/prim/070.pan:11:7-14: error: invalid subtype: ğ•Š <: â„‚ğ•™
tests/basic/post/prim/070.pan:14:7-10: error: invalid subtype: ğ•Š <: â„‚ğ•™