tests/basic/post/prim/070.pan
f70 : {v:char|?}
f70 = unit

f71 : {v:char|?}
f71 = true

f72 : {v:char|?}
f72 = 1

f73 : {v:char|?}
f73 = "hello"

f74 : {v:char|?}
f74 = "h"
